ci: JDK 20